--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -35,6 +35,14 @@ $home-light-clr: #f1fdf7;
 $trusted-by-clr: #b5b6ba;
 $trusted-by-bg-clr: #f5f5f5;
 $backdrop-bg-clr: #00000066;
+$hero-color-1: #0a4226;
+$hero-color-2: #5f1628;
+$hero-color-3: #a7445a;
+$hero-color-4: #0f4926;
+$hero-color-5: #ad3906;
+
+
+
 
 //User colors 
 $co-clr: #7a7d85;
