--- a/src/assets/styles/cmps/ChatApp.scss
+++ b/src/assets/styles/cmps/ChatApp.scss
@@ -89,6 +89,10 @@
                 min-height: rem(36px);
                 text-align: start;
                 margin-block-end: rem(12px);
+
+                &:hover {
+                    background-color: $light-clr2 ;
+                }
             }
         }
 
@@ -105,6 +109,61 @@
                 font-size: rem(14px);
                 line-height: rem(21px);
             }
+
+        }
+    }
+
+    .chat-app-footer {
+        justify-content: space-between;
+        padding: rem(12px) rem(24px) rem(24px) rem(24px);
+
+        .attach {
+            color: $dark-clr-4;
+            font-size: rem(18px);
+
+            &>* {
+                padding: rem(10px);
+                border-radius: 50%;
+                font-size: rem(22px);
+                cursor: pointer;
+
+                &:hover {
+                    background-color: $light-clr2 ;
+                }
+            }
+        }
+
+        .submit-btn {
+
+            button {
+                padding-block: rem(9px);
+                padding-inline: rem(16px);
+
+                font-size: rem(16px);
+                font-weight: 600;
+                line-height: rem(24px);
+
+                border: 1px solid transparent;
+                border-radius: rem(8px);
+                background-color: $modal-underline-clr;
+                color: $dark-clr-3;
+
+                transition: 0.6s;
+                cursor: default;
+
+                .paper-icon {
+                    color: $light-clr;
+                    font-size: rem(16px);
+                    margin-inline-end: rem(4px);
+                }
+
+                &.active {
+                    background-color: $dark-clr1;
+                    color: $light-clr;
+                    cursor: pointer;
+                }
+            }
+
 
         }
     }
