Responisve Dynamic buttons

--- a/src/assets/styles/cmps/DynamicBtn.scss
+++ b/src/assets/styles/cmps/DynamicBtn.scss
@@ -107,6 +107,7 @@
                 display: flex;
 
                 .filter-btn {
+                    max-height: rem(50px);
                     display: flex;
                     flex: 1;
                     align-items: center;
