Fix bugs for presentation

--- a/src/assets/styles/cmps/GigIndex.scss
+++ b/src/assets/styles/cmps/GigIndex.scss
@@ -82,6 +82,8 @@
     }
 
     @include for-mobile-layout {
+        margin-block-end: rem(100px);
+
         .top-of-gigs {
             font-size: rem(13px);
         }
