--- a/src/assets/styles/cmps/OrderCard.scss
+++ b/src/assets/styles/cmps/OrderCard.scss
@@ -38,7 +38,7 @@
             background-color: $light-clr;
 
             &:last-child {
-                margin-block-end: rem(50px);
+                // margin-block-end: rem(50px);
             }
 
             .order-info {
@@ -149,15 +149,33 @@
             }
 
             .order-data {
-                // grid-template-columns: 1fr 1fr;
                 display: grid;
-                margin-block-start: rem(12px);
+                grid-template-columns: 1fr 1fr;
                 min-height: rem(92px);
+                margin-block-start: rem(12px);
 
-                .btn-container {
-                    display: flex;
-                    gap: 1rem;
+                .btn-review {
+                    grid-column: 2;
+                    grid-row: 1;
+                    justify-content: end;
+                    
+                    &>* {
+                        color: $light-clr !important;
+                        background-color: $dark-accent-clr !important;
+                        width: 128px;
+                    }
                 }
+                
+                .btn-order {
+                    grid-column: 2;
+                    grid-row: 2;
+                    justify-content: end;
+
+                    &>* {
+                        width: 128px;
+                    }
+                }
+
 
                 .order {
                     grid-column: 1;
@@ -184,15 +202,6 @@
                             margin-inline-end: rem(1px);
                         }
                     }
-                }
-
-
-                .add-review {
-                    grid-row: 1;
-                }
-
-                .show-order {
-                    grid-row: 2;
                 }
 
                 .btn {
