Responsive notes, Hamburger & sellingText

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -286,6 +286,10 @@
         }
 
         .app-header {
+            .hamburger-icon {
+                padding: 0;
+            }
+
             .logo-container {
                 .logo {
                     display: none;
