--- a/src/assets/styles/cmps/OrderList.scss
+++ b/src/assets/styles/cmps/OrderList.scss
@@ -116,3 +116,17 @@
 
     }
 }
+
+.no-orders-msg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    text-align: center;
+    font-size: rem(35px);
+
+    img {
+        width: rem(200px);
+    }
+}
