--- a/src/assets/styles/cmps/LoginSignup.scss
+++ b/src/assets/styles/cmps/LoginSignup.scss
@@ -54,7 +54,7 @@
             font-size: em(16px);
             margin-block-end: em(32px);
 
-          
+
         }
 
         .terms {
@@ -131,6 +131,7 @@
             font-family: inherit;
             background-color: black;
             margin-bottom: rem(14px);
+
             &.disabled {
                 cursor: not-allowed;
             }
@@ -141,6 +142,23 @@
             }
         }
 
+    }
+
+    @include for-mobile-layout {
+        width: rem(365px);
+        border-radius: rem(15px);
+
+        .cover-img {
+            display: none;
+        }
+
+        .benefits-container {
+            display: none;
+        }
+
+        .user-actions {
+            border-radius: rem(14px);
+        }
     }
 
 }
