--- a/src/assets/styles/views/AddGig.scss
+++ b/src/assets/styles/views/AddGig.scss
@@ -11,6 +11,7 @@
         grid-column: 1/-1;
         display: grid;
         gap: rem(15px);
+        margin-block-end: rem(20px);
     }
 
     .heading {
@@ -192,9 +193,14 @@
                     outline: 0;
                 }
 
+                &.title {
+                    font-weight: 700;
+                }
+
                 &.desc {
                     height: 14.1875rem;
                     resize: none;
+                    color: $dark-clr-1;
                 }
             }
         }
@@ -205,16 +211,16 @@
             gap: rem(12px);
             background-color: #f0f0f091;
             border: 1px solid #c8c8c85e;
-            padding: rem(15px);
+            padding: rem(18px);
             border-radius: rem(4px);
             margin-block: rem(25px);
 
             .heading {
-                font-size: rem(34px);
+                font-size: rem(28px);
             }
 
             .sub-heading {
-                font-size: rem(20px);
+                font-size: 1rem;
             }
 
             .numbers {
@@ -228,6 +234,10 @@
             .form-label {
                 align-items: center;
                 gap: 1rem;
+
+                &.package-details {
+                    margin-block-end: rem(18px);
+                }
             }
 
             .add-features {
