Change img preview in login to be round

--- a/src/assets/styles/cmps/LoginSignup.scss
+++ b/src/assets/styles/cmps/LoginSignup.scss
@@ -121,6 +121,12 @@
             #imgUpload {
                 display: none;
             }
+
+            img {
+                width: rem(40px);
+                height: rem(40px);
+                border-radius: 5rem;
+            }
         }
 
         .btn.continue {
