--- a/src/assets/styles/cmps/OrderCard.scss
+++ b/src/assets/styles/cmps/OrderCard.scss
@@ -257,10 +257,41 @@
         }
     }
 
+    .sort-container {
+        font-size: rem(16px);
+        font-weight: 700;
+        .drop-down-btn {
+            .drop-down-menu {
+                width: rem(120px);
+                padding: rem(10px);
+                .drop-down-item {
+                    &:not(:last-child) {
+                        padding-block-end: rem(10px);
+                    }
+                    
+                    &:last-child {
+                        padding-block-start: rem(10px);
+                    }
+                    
+                    & > * {
+                        color: $dark-clr-4;
+                        justify-content: center;
+                        
+                        &:hover {
+                            color: $dark-clr;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+
     @include for-mobile-layout {
         .buyer-orders {
             .no-orders-msg {
                 font-size: rem(18px);
+
                 img {
                     width: rem(70px);
                 }
